# src/2-features/1-auth/1-models/User.js
@@ -46,6 +46,12 @@ const User = new Schema(
         resetPasswordTokenDeathTime: {
             type: Number,
         },
+        inviteToken: {
+            type: Array
+        },
+        inviteTokenDeathTime: {
+            type: Number
+        }
     }
 )
 
